src/components/Games/ContentTable/ContentTable.module.scss
@import 'scss/vars.scss';

.wrapper {
  flex: 0 1 929.05px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 2.9925rem;
  padding: 0 1.5rem 0 1.106rem;

  img {
    width: 3.34rem;
  }
}

.calendarsWrapper {
  display: flex;
  align-items: center;
  align-content: center;

  > * {
    margin-left: 1rem;
  }
}

.teamWrapper {
  display: flex;
  align-items: center;

  > * + * {
    margin-left: 1.106rem;
  }
}

.teamName {
  font: 700 1.125rem var(--font-comfortaa);
  max-width: 15.67rem;
}

.table {
  margin: 1rem 1.5rem 0 5rem;

  > .tableHeader {
    color: #838383;
    border-bottom: 0.5px solid rgb(16, 16, 16, 0.01);
    box-shadow: 0px 6px 6px -6px rgb(16, 16, 16, 0.07);
    display: flex;
    align-items: center;
    min-height: 2rem;

    > div {
      font: 700 0.75rem var(--font-nunito);
      text-align: left;

      &:first-child {
        text-align: center;
        width: 3.4rem;
      }
      &:nth-child(2) {
        width: 5rem;
        padding-right: 0.5rem;
      }
      &:nth-child(3) {
        width: 12rem;
      }
      &:nth-child(4) {
        width: 5rem;
      }
      &:nth-child(5) {
        width: 12.5rem;
        padding-right: 0.5rem;
      }
      &:nth-child(6) {
        width: 10.3rem;
      }
      &:nth-child(7) {
        width: 3rem;
      }
    }
  }

	.rows {
		max-height: calc(55vh + 7px);
		overflow-y: scroll;
		scroll-behavior: smooth;
		position: relative;
		
		&::-webkit-scrollbar {
			width: 0;
		}
	}

  .tableRow {
    min-height: 2rem;
    display: flex;
    align-items: center;

    > div {
      text-align: left;
			font: 300 0.875rem var(--font-nunito);

      &:first-child {
        text-align: center;
        width: 3.4rem;
      }
      &:nth-child(2) {
        width: 5rem;
        padding-right: 0.5rem;
      }
      &:nth-child(3) {
        width: 12rem;
      }
      &:nth-child(4) {
        width: 5rem;
				text-align: center;
        font: 700 0.875rem var(--font-athiti);
      }
      &:nth-child(5) {
        width: 12.5rem;
        padding-right: 0.5rem;
      }
      &:nth-child(6) {
        width: 10.3rem;
				a {
          color: var(--side-color);
          text-decoration: underline;
        }

        a + a {
          margin-left: 1rem;
        }
      }
      &:nth-child(7) {
        width: 3rem;
      }
    }

    &.withDate {
      min-height: 3.2rem;
      padding-top: 1.2rem;

      &[data-before] {
        position: relative;

        &::before {
          content: attr(data-before);
          left: 0;
          top: 0;
          position: absolute;
          width: 160%;
          text-align: left;
          padding-left: 5px;
          color: #838383;
          font: 400 0.75rem / 1.5rem var(--font-nunito);
        }
      }
    }

    &:nth-child(2n) {
      background-color: #eaeaea;
    }
  }
}

